--- a/Mangatarem.mw
+++ b/Mangatarem.mw
@@ -1,12 +1,22 @@
-[[File:Ph locator pangasinan mangatarem.png|right|frameless|300x300px]]
-Say Baley ya Mangatarem ya sakey ya 2nd class ya baley ed probinsiya'y Pangasinan, Filipinas. Onong ed 2000 census walay populasyon to ya 60,943 ya too ed 11,704 ya pamilya.
+{{Infobox location}}
 
-[[File:Mangatarem,Pangasinanjf7091 09.JPG|thumb]]
-Atoop so ngaran ya Mangatarem lapo diyad salitang Ilokano ya " Manga ken Tirem" ya labay tong ibaga "Mango and Oyster" <ref>www.pangasinan.gov.ph</ref>
+{{Philippine Census			
+| title = Sensus na populasyon ed <br> Mangatarem, Pangasinan
+| 1990 = 47714		
+| 1995 = 53603		
+| 2000 = 60943		
+| 2007 = 65366		
+| 2010 = 69969		
+| 2015 = 		
+| 2020 = 		
+| 2025 = 		
+| 2030 = 		
+|}}
+Say '''Mangatarem''' sakey 2nd class ya [[baley]] ed [[luyag na Pangasinan]], [[Filipinas]]. Onong ed [[2000]] census, walay population to ya 60,943 ya too diad 11,704 ya pamilya.
 
-==Listaa'y Barangay==
-Walay 82 ya barangay ed Baley sa Mangatarem
+==Listaan na Barangay==
 
+Say Mangatarem walay 82 ya [[barangay]].
 
 <table border=0><tr>
 <td valign=top>
@@ -42,7 +52,7 @@ Walay 82 ya barangay ed Baley sa Mangatarem
 * Catarataraan
 * Caturay Norte
 * Caturay Sur
-* [[Caviernesan]]
+* Caviernesan
 * Dorongan Ketaket
 * Dorongan Linmansangan
 * Dorongan Punta
@@ -57,14 +67,14 @@ Walay 82 ya barangay ed Baley sa Mangatarem
 * Macarang
 * Malabobo
 * Malibong
-* Malunec(original)
+* Malunec
 * Maravilla (Pob.)
-* Maravilla-Arellano Ext. (Pob.)
+* Maravilla-Arellano Ext. (Pob
 * Muelang
 * Naguilayan East
 * Naguilayan West
 * Nancasalan
-* Cabison-Bulaney-Niog
+* Niog-Cabison-Bulaney
 * Olegario-Caoile (Pob.)
 </td><td valign=top>
 * Olo Cacamposan
@@ -96,15 +106,12 @@ Walay 82 ya barangay ed Baley sa Mangatarem
 * Zamora (Pob.)
 </td></tr></table>
 
-==Mga Kawing Panlabas==
+== Saray reperensiya ==
+{{Reflist}}	
+
+==Saray Gawing ed Labas==
+
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
-
-* [http://www.pangasinan.gov.ph Official Website of the Provincial Government of Pangasinan]
-* [http://www.pasyalan.net/pangasinan/ Pasyalan Pangasinan]
-* [http://www.dalityapi.com Pangasinan: Preservation and Revitalization of the Pangasinan Language and Literature]
-
 {{Pangasinan}}
 
-{{coor title dm|15|47|N|120|18|E|region:PH_type:city}}
-
-[[Kaurian:Mga bayan at lungsod sa Pilipinas]]
+[[Category:Saray baley na Pangasinan]]
