--- a/Agusan_del_Sur.mw
+++ b/Agusan_del_Sur.mw
@@ -15,21 +15,21 @@ Say Agusan ed Abalatan walay 14 ya [[Baley na Filipinas|baley]]:
 
 <table border="0"><tr>
 <td valign="top">
-* [[Bayugan, Agusan ed Abalaten|Bayugan]]
-* [[Bunawan, Agusan ed Abalaten|Bunawan]]
-* [[Esperanza, Agusan ed Abalaten|Esperanza]]
-* [[La Paz, Agusan ed Abalaten|La Paz]]
-* [[Loreto, Agusan ed Abalaten|Loreto]]
-* [[Prosperidad, Agusan ed Abalaten|Prosperidad]]
-* [[Rosario, Agusan ed Abalaten|Rosario]]
+* [[Bayugan]]
+* [[Bunawan, Agusan del Sur|Bunawan]]
+* [[Esperanza, Agusan del Sur|Esperanza]]
+* [[La Paz, Agusan del Sur|La Paz]]
+* [[Loreto, Agusan del Sur|Loreto]]
+* [[Prosperidad, Agusan del Sur|Prosperidad]]
+* [[Rosario, Agusan del Sur|Rosario]]
 </td><td valign="top">
-* [[San Francisco, Agusan ed Abalaten|San Francisco]]
-* [[San Luis, Agusan ed Abalaten|San Luis]]
-* [[Santa Josefa, Agusan ed Abalaten|Santa Josefa]]
-* [[Sibagat, Agusan ed Abalaten|Sibagat]]
-* [[Talacogon, Agusan ed Abalaten|Talacogon]]
-* [[Trento, Agusan ed Abalaten|Trento]] 
-* [[Veruela, Agusan ed Abalaten|Veruela]]
+* [[San Francisco, Agusan del Sur|San Francisco]]
+* [[San Luis, Agusan del Sur|San Luis]]
+* [[Santa Josefa, Agusan del Sur|Santa Josefa]]
+* [[Sibagat, Agusan del Sur|Sibagat]]
+* [[Talacogon, Agusan del Sur|Talacogon]]
+* [[Trento, Agusan del Sur|Trento]] 
+* [[Veruela, Agusan del Sur|Veruela]]
 </td></tr></table>
 
 === Fisikal ===
@@ -38,7 +38,7 @@ Say Agusan ed Abalatan walay 14 ya [[Baley na Filipinas|baley]]:
 
 * [http://www.agusansur.gov.ph Say Ofisyal na Websayt na Gobierno Provinsyal na Agusan del Sur]
 
-{{Agusan ed Abalaten}}
+{{Agusan del Sur}}
 
 
 [[Category:Caraga]]
