--- a/Bayugan.mw
+++ b/Bayugan.mw
@@ -1,6 +1,13 @@
-[[File:Ph_locator_agusan_del_sur_bayugan.png|right|270px]] 							
+{{Infobox location
+| image_flag  =
+}}						
 									
 Say '''Bayugan''' et kumatlo ya klase siyudad ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 99,361 totoo. <br> 	
-Walay kabaleg tan sukat to ya 688.77 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8502. 			
+Walay kabaleg tan sukat to ya 688.77 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8502.
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Agusan del Sur}}	 			
 									
 [[Category:Saray siyudad na Filipinas]]
