--- a/Legazpi,_Albay.mw
+++ b/Legazpi,_Albay.mw
@@ -1,6 +1,94 @@
-[[File:Ph_locator_albay_legazpi.png|right|270px]] 							
+{{infobox location}}							
 									
 Say '''Legazpi, Albay''' et kumatlo ya klase siyudad ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 182,201 totoo. <br> 	
-Walay kabaleg tan sukat to ya 153.70 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4500. 			
-									
+Walay kabaleg tan sukat to ya 153.70 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4500.
+
+== Listaan na barangay ==
+
+Say Legazpi walay 70 ya [[barangay]]: 
+
+<table border=0><tr>
+<td valign=top>
+* Arimbay
+* Bagacay
+* Bagong Abre
+* Banquerohan
+* Em's Barrio
+* Maoyod (Poblacion)
+* Tula-tula
+* Ilawod West
+* Ilawod
+* Ilawod East
+* Kawit-East Washington
+* Rizal Sreet.
+* Cabagñan
+* Em's Barrio South
+* Cabagñan West
+* Binanuahan West
+* Binanuahan East
+* Imperial Court Subd
+</td><td valign=top>
+* Cabagñan East
+* Lapu-lapu
+* Dinagaan
+* Victory Village South
+* Victory Village North
+* Sabang
+* Em's Barrio East
+* Kapantawan
+* Pigcale
+* Centro-Baybay
+* PNR-Peñaranda St.-I
+* Oro Site-Magallanes
+* Tinago
+* Bitano
+* Bonot
+* Sagpon (Poblacion)
+* Sagmin (Poblacion)
+* Bañadero (Poblacion)
+</td><td valign=top>
+* Baño
+* Bagumbayan
+* Pinaric
+* Bariis
+* Bigaa
+* Bogtong 
+* Bonga
+* Buenavista
+* Buyuan
+* Cagbacong
+* Cruzada
+* Dap-dap
+* Dita
+* Estanza
+* Gogon
+* Homapon
+* Imalnod
+</td><td valign=top>
+* Mabinit
+* Mariawa
+* Maslog
+* Padang
+* Pawa
+* Puro
+* Rawis
+* San Francisco
+* San Joaquin
+* San Roque
+* Tamaoyan
+* Taysan
+* Matanag
+* Cabugao
+* Rizal Street
+* Buragwis
+* Lamba
+</td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Albay}}
+
+{{philippines-geo-stub}}
+
 [[Category:Saray siyudad na Filipinas]]
