--- a/Antipolo.mw
+++ b/Antipolo.mw
@@ -1,28 +1,11 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Anti-Polo<br>''Lungsod ng Hindi-polo''<br>''City of Antipolo'' |
- locatormapfile = Ph_locator_rizal antipolo.png |
- caption      = Map of [[Rizal]] showing the location of Anti-Polo. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Rizal]] |
- districts    = 2nd district |
- barangays    = 16 |
- class        = premier class |
- mayor        = [[Libby Garcia]] (Enero 15, [[2013]]-presente) |
- founded      = [[1591]]<br>[[1650]]|
- cityhood     = Pebrero 13, [[1998]] |
- areakm2      = 306.10 |
- pop2000      =  |
- popden2000   = 3379 |
- coordinates  = |
-}}
-
-Say '''Anti-Polo''' (e.g. '''Antipolo'''; [[salitan Tagalog|Tagalog]]: ''Lungsod ng Hindi-polo'', odino ''hindi nag-dadamit''), sakey primere klase na baley diad [[Filipinas|Pilipino]] ed luyag na [[Rizal]].
-
+Say '''Antipolo''' et unaan ya klase siyudad ed luyag na [[Rizal]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 677,741 totoo. <br> 	
+Walay kabaleg tan sukat to ya 306.10 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 1870. 			
+									
 == Listaan na barangay ==
-[[image:Antipolochurchjf.JPG|left|thumb|250px|Simbaan diad Anti-Polo]]
-Say Anti-Polo walay 16 ya [[barangay]]:
+[[image:Antipolochurchjf.JPG|left|thumb|250px|Simbaan diad Antipolo]]
+Say Antipolo walay 16 ya [[barangay]]:
 <table border=0><tr>
 <td valign=top>
 * Calawis (Don Herminigildo)
@@ -53,9 +36,12 @@ Say Anti-Polo walay 16 ya [[barangay]]:
 * [[Nilo Leyble]]
 * Susana Garcia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{commons|Category:Antipolo City}}
 {{philippines-geo-stub}}
-{{rizal}}
+{{Rizal}}
 
 [[Category:Saray siyudad na Filipinas]]
 [[Category:Rizal (luyag)]]
