--- a/Lucena.mw
+++ b/Lucena.mw
@@ -1,8 +1,8 @@
-{{translation}}
+{{Infobox location}}
 
-[[image:Ph locator quezon lucena.png|right|thumb|Lucina, Quezon]]
-Say '''Siyudad na Lucena''' o '''Siyudad na Lucina''' (salitan English: ''Lucena City''; salitan Tagalog: ''Lungsod ng Lucena''), so sakey siyudad diad kabesera ed luyag na [[Quezon]] dia [[Filipinas]].
-
+Say '''Lucena, Quezon''' et unaan ya klase siyudad ed luyag na [[Quezon]], [[Filipinas]]. Unong ed 2010 Census, say papulasyon to et 246,392 totoo. <br> 	
+Walay kabaleg tan sukat to ya 80.21 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4300. 			
+									
 ==Saray baranggay==
 
 Say Lucena walay 11 ya [[barangay]]
@@ -47,7 +47,10 @@ Say Lucena walay 11 ya [[barangay]]
 *Market View (Pob.)
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{philippines-geo-stub}}
 {{Quezon}}
 
-[[category:Quezon]]
+[[Category:Saray siyudad na Filipinas]]
