--- a/Biñan.mw
+++ b/Biñan.mw
@@ -1,26 +1,8 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = City of Biñán<br />Siyudad na Biñán |
- sealfile     = |
- locatormapfile = Ph_locator_laguna_binan.png |
- caption      = Map of [[Laguna]] showing the location of Biñán. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 1st district of Laguna |
- barangays    = 24 |
- class        = premier class |
- mayor        = Marlyn Alonte Naguiat |
- founded      = [[1791]]|
- cityhood     = [[February 10]], [[2010]]|
- areakm2      = 43.50 |
- pop2000      =  |
- popden2000   = 6,500 |
- coordinates  = |
-}}
-
-Say '''Siyudad na Biñán''' (English: ''City of Biñán''; [[salitan Tagalog|Tagalog]]: ''Lungsod ng Biñán'') sakey primere a clase na [[siyudad]] ed [[luyag]] na [[Laguna]], [[Filipinas]].
-
+Say '''Biñan''' et kumanem ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 283,396 totoo. <br> 	
+Walay kabaleg tan sukat to ya 43.50 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4024. 			
+									
 == Listaan na Barangay ==
 
 Say Siyudad na Biñán walay 24 ya [[barangay]]:
@@ -61,7 +43,10 @@ File:Binan townhall.jpg|Biñán City Hall
 File:Church of San Isidro Labrador.jpg|Simbaan na Biñán (San Isidro Labrador)
 </gallery>
 
-{{stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
+{{philippines-geo-stub}}
 {{Laguna}}
 
 [[Category:Saray siyudad na Filipinas]]
