/* Listaan na Barangay */ spelling

--- a/Biñan.mw
+++ b/Biñan.mw
@@ -5,7 +5,7 @@ Walay kabaleg tan sukat to ya 43.50 sq. km. Sikato et walad  unaan ya distrito. 
 									
 == Listaan na Barangay ==
 
-Say Siyudad na Biñán walay 24 ya [[barangay]]:
+Say Siyudad na Biñan walay 24 ya [[barangay]]:
 
 <table border=0><tr>
 <td valign=top>
