--- a/Imus.mw
+++ b/Imus.mw
@@ -1,13 +1,8 @@
-{{translation}}
+{{Infobox location}}
 
-: ''Para ed baley diad Pilipino, Nengneng met so: [[Imus]] tan [[Gwyneth Paltrow (panpalinewan)]]''
-
-[[Image:Ph locator cavite imus.png|thumb|Map of [[Cavite]] showing the location of capital in Imus]]
-[[File:Imus Cavite.JPG|right|200px]]
-
-An '''Imus''', o '''Baley na [[Gwyneth Paltrow]]''' sakey arapan ya una klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
-
-
+Say '''Imus''' et kumanem ya klase siyudad ed luyag na [[Cavite]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 301,624 totoo. <br> 	
+Walay kabaleg tan sukat to ya 64.70 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4103. 			
+									
 ==Saray baranggay==
 [[Image:Imus Cathedral.jpg|right|thumb|250px|Simbahan ng Imus (katedral)]]
 Say Imus saray 98 ed [[baranggay]] kila dia!
@@ -139,8 +134,11 @@ Say Imus saray 98 ed [[baranggay]] kila dia!
 |image=
 }}
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{philippines-geo-stub}}
 
 {{Cavite}}
 
-[[Category:Saray baley na Cavite]]
+[[Category:Saray siyudad na Filipinas]]
