--- a/Mabalacat.mw
+++ b/Mabalacat.mw
@@ -1,26 +1,8 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Mabalacat<br>''Mabalakat Lakanbalen'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga mabalacat.png |
- caption      = Map of [[Pampanga]] showing the location of Mabalacat. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Northern District |
- barangays    = 28 |
- class        = 1st class |
- mayor        = [[Marino Morales]] |
- founded      = [[1712]] |
- cityhood     = Hulio 17, [[2012]] |
- areakm2      = -  |
- pop2000      = 171,045 |
- popden2000   = - |
- coordinates  = |
-}}
-
-Say '''Mabalacat''' ([[salitan Kapampangan|Kapampangan]]: ''Lakanbalen ning Mabalakat''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 171,045 ya too diad 35,134 ya pamilya. 
-
+{{Infobox location}}
+									
+Say '''Mabalacat''' et kumanem ya klase siyudad ed luyag na [[Pampanga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 215,610 totoo. <br> 	
+Walay kabaleg tan sukat to ya 83.18 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 2010. 			
+									
 
 == Listaan na barangay ==
 
@@ -65,6 +47,9 @@ Rin siyudad na Mabalacat walay 28 ya [[barangay]]:
 File:Mabalacat 1.JPG
 File:Mabalacat 2.JPG
 </gallery>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Pampanga}}
