not an article page

--- a/Category:Pampanga.mw
+++ b/Category:Pampanga.mw
@@ -1,5 +1,2 @@
-{{translation}}
 
-Say [[Pampanga]] sakey luyag ed [[Filipinas]]. Say kabesera et [[siyudad na San Fernando, Pampanga|San Fernando]]. Ragay ed 3 ya siyudad kila nia et [[siyudad na Angeles, Filipinas|Ángeles]] tan [[Mabalacat, Pampanga|Mabalacat]].
-
-[[category:Filipinas]]
+[[Category:Filipinas]]
