--- a/San_Jose_del_Monte.mw
+++ b/San_Jose_del_Monte.mw
@@ -1,29 +1,9 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Siyudad na San José Del Monte<br>''Cidade do São José do la Montanhas'' |
- sealfile     = |
- locatormapfile = Ph_locator_bulacan san jose del monte.png |
- caption      = Map of [[Bulakan]] showing the location of the city of San José Del Monte. |
- region       = [[Pegley na Luzon]] (Region III) |
- province     = [[Bulakan]] |
- districts    = lone district |
- barangays    = 59 |
- class        = urbano |
- mayor        = Reynaldo Sariana San Pedro  |
- founded      = Marso 2, 1752 |
- cityhood     = [[september 10|Septiyembre 10]], [[2000]]|
- areakm2      = 105.53  |
- pop2000      = 454,553 |
- popden2000   = 4300 |
- coordinates  = 14°48′50″N 121°02′43″E |
-}}
-
-Say '''San José Del Monte''' ([[salitan Português|Português]]: ''Cidade do São José do la Montanhas''), sakey sub-urban na siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Bulakan]].
-
-Ragay ed Distrito diad Agna-kongresiyonal nen [[December 18|Disiembre 18]], [[2003]] 
-
-== Listaan na Barangay ==
+Say '''San Jose del Monte''' et unaan ya klase siyudad ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 454,553 totoo. <br> 	
+Walay kabaleg tan sukat to ya 105.53 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 3023. 			
+									
+== Listaan na barangay ==
 
 Say San José Del Monte walay 59 ya [[barangay]]:
 [[image:SJDMParish.JPG|right|thumb|Saint Josef the Worker Parish Church]]
@@ -92,7 +72,10 @@ Say San José Del Monte walay 59 ya [[barangay]]:
 * Saint Martin de Porres
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 {{philippines-geo-stub}}
-{{bulakan}}
+{{Bulacan}}
 
 [[Category:Saray siyudad na Filipinas]]
