--- a/Tabuk.mw
+++ b/Tabuk.mw
@@ -1,6 +1,1 @@
-[[File:Ph_locator_kalinga_tabuk.png|right|270px]] 							
-									
-Say '''Tabuk''' et kumanem ya klase siyudad ed luyag na [[Kalinga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 103,912 totoo. <br> 	
-Walay kabaleg tan sukat to ya 700.25 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 3800. 			
-									
-[[Category:Saray siyudad na Filipinas]]
+#REDIRECT [[Tabuk, Kalinga]]
