--- a/Tabuk,_Kalinga.mw
+++ b/Tabuk,_Kalinga.mw
@@ -1,6 +1,8 @@
-[[File:Ph_locator_kalinga_tabuk.png|right|Mapa na Kalinga ya nanengneng so location na Tabuk]]
-Say '''Tabuk''' sakey 1st class ya [[baley na Filipinas|baley]] ed [[luyag na Filipinas|luyag]] na [[Kalinga]], [[Filipinas]]. Sakey say kapital na Kalinga. Onong ed [[2000]] census, walay population to ya 78,633 ya too diad 13,985 ya pamilya.
-
+{{infobox location}}
+								
+Say '''Tabuk''' et kumanem ya klase siyudad ed luyag na [[Kalinga]], [[Filipinas]]. Unong ed 2010 Census, say papulasyon to et 103,912 totoo. <br> 	
+Walay kabaleg tan sukat to ya 700.25 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 3800. 			
+									
 == Saray barangay ==
 
 Say Tabuk walay 42 ya [[barangay]].
@@ -55,6 +57,9 @@ Say Tabuk walay 42 ya [[barangay]].
 * San Julian
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 == Saray nipaway ya kawing ==
 
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -62,4 +67,4 @@ Say Tabuk walay 42 ya [[barangay]].
 
 {{Kalinga}}
 
-[[Category:Saray baley na Kalinga]]
+[[Category:Saray siyudad na Filipinas]]
