--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -42,7 +42,7 @@
 |group2 = Saray siyudad
 |list2 = 
 * [[Cauayan]]
-* [[Ilagan, Isabela|Ilagan]]
+* [[Ilagan]]
 * [[Santiago, Isabela|Santiago]]
 }}<noinclude>
 [[Category:Saray baley na Isabela| ]]
