--- a/Ilagan.mw
+++ b/Ilagan.mw
@@ -1,7 +1,8 @@
 {{Infobox location}}
 
-Say '''Ilagan''' sakey 1st class ya [[baley na Filipinas|baley]] ed [[luyag na Filipinas|luyag]] na [[Isabela]], [[Filipinas]]. Sakey say kapital na baley na Isabela.  Onong ed [[2000]] census, walay population to ya 119,990 ya too diad 24,085 ya pamilya.
-
+Say '''Ilagan''' et kumatlo ya klase siyudad ed luyag na [[Isabela]], [[Filipinas]]. Unong ed 2010 Census, say papulasyon to et 135,174 totoo. <br> 	
+Walay kabaleg tan sukat to ya 1,166.26 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 3300. 			
+									
 == Saray barangay ==
 
 Say Ilagan walay 98 ya [[barangay]].
@@ -113,4 +114,4 @@ Say Ilagan walay 98 ya [[barangay]].
 
 {{Isabela}}
 
-[[Category:Saray baley na Isabela]]
+[[Category:Saray siyudad na Filipinas]]
