--- a/Template:Surigao_ed_Baybay.mw
+++ b/Template:Surigao_ed_Baybay.mw
@@ -1,12 +1,1 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Surigao ed Baybay]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Surigao]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Alegria (Mindanao)|Alegria]] | [[Bacuag]] | [[Burgos (Surigao del Norte)|Burgos]] | [[Santa Monica, Surigao del Norte|Santa Monica]] | [[Dapa (baley)|Dapa]] | [[Del Carmen (Mindanao)|Del Carmen]] | [[General Luna (Mindanao)|General Luna]] | [[Gigakit]] | [[Klaber (Surigao del Norte)|Klaber]] | [[Mainet]] | [[Malimono]] | [[Pilar (Mindanao)|Pilar]] | [[Placer (Surigao del Norte)|Placer]] | [[San Benito (Surigao del Norte)|San Benito]] | [[San Francisco (Surigao del Norte)|San Francisco]] | [[San Isidro (Surigao del Norte)|San Isidro]] | [[Sison (Mindanao)|Sison]] | [[Socorro (Mindanao)|Socorro]] | [[Tagana-an]] | [[Tubod (Mindanao)|Tubod]]
-|}
-</div>
+#REDIRECT [[Template:Surigao del Norte]]
