--- a/Surigao_del_Norte.mw
+++ b/Surigao_del_Norte.mw
@@ -8,28 +8,28 @@ Walay kabaleg tan sukat to ya  1,972.93 kilometro kuwadrado. Say dialling code t
 [[Category:Saray luyag na Filipinas]]  
 ==Hiyograpiko==
 
-Say Surigao ed Baybay walay 20 ya baley (ragay ed siyudad [[Surigao]]):
+Say Surigao ed Baybay walay 20 ya baley (ragay ed siyudad [[Siyudad na Surigao|Surigao]]):
 
-* [[Alegria (Mindanao)|Alegria]]
-* [[Bacuag]]
-* [[Burgos (Surigao del Norte)|Burgos]]
-* [[Klaber (Surigao del Norte)|Claver]]
-* [[Dapa (baley)|Dapa]]
-* [[Del Carmen (Mindanao)|Del Carmen]]
-* [[General Luna (Mindanao)|General Luna]]
-* [[Gigakit]]
-* [[Mainet]]
-* [[Malimono]]
-* [[Pilar (Mindanao)|Pilar]]
-* [[Placer (Surigao del Norte)|Placer]]
-* [[San Benito (Surigao del Norte)|San Benito]]
-* [[San Francisco (Surigao del Norte)|San Francisco]] (Anao-Aon)
+* [[Alegria, Surigao del Norte|Alegria]]
+* [[Bacuag, Surigao del Norte|Bacaug]]
+* [[Burgos, Surigao del Norte|Burgos]]
+* [[Claver, Surigao del Norte|Claver]]
+* [[Dapa, Surigao del Norte|Dapa]]
+* [[Del Carmen, Surigao del Norte|Del Carmen]]
+* [[General Luna, Surigao del Norte|General Luna]]
+* [[Gigaquit, Surigao del Norte|Gigaquit]]
+* [[Mainit, Surigao del Norte|Mainit]]
+* [[Malimono, Surigao del Norte|Malimono]]
+* [[Pilar, Surigao del Norte|Pilar]]
+* [[Placer, Surigao del Norte|Placer]]
+* [[San Benito, Surigao del Norte|San Benito]]
+* [[San Francisco, Surigao del Norte|San Francisco]] (Anao-Aon)
 * [[San Isidro, Surigao del Norte|San Isidro]]
 * [[Santa Monica, Surigao del Norte|Santa Monica]] 
-* [[Sison (Mindanao)|Sison]]
-* [[Socorro (Mindanao)|Socorro]]
-* [[Tagana-an]]
-* [[Tubod (Mindanao)|Tubod]]
+* [[Sison, Surigao del Norte|Sison]]
+* [[Socorro, Surigao del Norte|Socorro]]
+* [[Tagana-an, Surigao del Norte|Tagana-an]]
+* [[Tubod, Surigao del Norte|Tubod]]
 
 </td></tr></table>
 
