--- a/Obando.mw
+++ b/Obando.mw
@@ -1,54 +1,1 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Obando |
- sealfile     = Obando logo orange.jpg |
- locatormapfile = Ph_locator_bulacan obando.png |
- caption      = Map of [[Bulakan]] showing the location of Obando. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Bulakan]] |
- districts    = - |
- barangays    = 11 |
- class        = agna-klase|
- mayor        = [[Orencio E. Gabriel]] |
- founded      = [[1753]] |
- cityhood     = |
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = |
-}}
-
-Say '''Obando''' sakey baley dia [[Bulakan]], [[Filipinas]]
-
-== Listaan na barangay ==
-
-[[File:Obando.jpg|right|thumb|250px|Simbahan na Obando]]
-* Binuangan
-* Catanghalan
-* Hulo
-* Lawa
-* Salambao
-* Paco
-* Pag-asa (Pob.)
-* Paliwas
-* Panghulo
-* San Pascual
-* Tawiran
-
-== Lokasiyon ed Hiyograpiko ==
-
-{{Geographic location
- | Centre    = Obando
- | North     = [[Meycauayan]]
- | East      = [[Siyudad na Valenzuela|Valenzuela]]
- | Southeast = [[Malabon]]
- | South     = [[Siyudad na Navotas|Navotas]]
- | West      = [[Bulakan (baley)|Bulakan]]
-}}
-
-
-{{philippines-geo-stub}}
-{{Bulakan}}
-
-[[Category:Saray baley na Bulacan]]
+#REDIRECT [[Obando, Bulacan]]
