--- a/Bustos.mw
+++ b/Bustos.mw
@@ -1,52 +1,1 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Bustos |
- sealfile     = Official Seal of Bustos, Bulacan (2010-Smaller Size).png |
- locatormapfile = Ph_locator_bulacan bustos.png |
- caption      = Map of [[Bulakan]] showing the location of Bustos. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Bulakan]] |
- districts    = 2nd district |
- barangays    = 14 |
- class        = 3rd class |
- mayor        = [[Arnel Mendoza]] |
- founded      = - |
- cityhood     = |
- areakm2      = - |
- pop2000      = 47091 |
- popden2000   = - |
- coordinates  = |
-}}
-
-Say '''Bustos'''  sakey baley dia [[Bulakan]], [[Filipinas]]
-
-==Historiya==
-
-Say Bustos sakey arpan ya sakop ed nia kapit a baloy ed baley na [[Baliwag]].
-
-
-== Listaan na barangay ==
-[[Image:Municipiobustosjf.JPG|right|thumb|250px|Municipio na Bustos]]
-Say Bustos walay 14 ya [[barangay]]:
-
-* Bonga Mayor
-* Bonga Menor
-* Buisan
-* Camachilihan
-* Cambaog
-* Catacte
-* Liciada
-* Malamig
-* Malawak
-* Poblacion
-* San Pedro
-* Talampas
-* Tanawan
-* Tibagan
-
-
-{{philippines-geo-stub}}
-{{Bulakan}}
-
-[[Category:Saray baley na Bulacan]]
+#REDIRECT [[Bustos, Bulacan]]
