--- a/Template:Bulacan.mw
+++ b/Template:Bulacan.mw
@@ -9,7 +9,7 @@
 * [[Balagtas, Bulacan|Balagtas]]
 * [[Baliuag, Bulacan|Baliuag]]
 * [[Bocaue, Bulacan|Bocaue]]
-* [[Bulakan]]
+* [[Bulacan, Bulacan|Bulakan]]
 * [[Bustos, Bulacan|Bustos]]
 * [[Calumpit, Bulacan|Calumpit]]
 * [[Doña Remedios Trinidad, Bulacan|Doña Remedios Trinidad]]
