--- a/Angat,_Filipinas.mw
+++ b/Angat,_Filipinas.mw
@@ -1,53 +1,1 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Angat |
- sealfile     = DEU Oldenburg COA.svg |
- locatormapfile = Ph_locator_bulacan angat.png |
- caption      = Map of [[Bulakan]] showing the location of Angat. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Bulakan]] |
- districts    = 3rd district |
- barangays    = 16 |
- class        = 2nd class |
- mayor        = Leonardo R. De Leon |
- founded      = 1683 |
- cityhood     = |
- areakm2      = 74 |
- pop2000      = 53117 |
- popden2000   = 7200 |
- coordinates  = |
-}}
-
-Say '''Angat'''  sakey baley dia [[Bulakan]], [[Filipinas]]
-
-== Listaan na barangay ==
-[[Image:Angat Public Market in Bulacan.jpg|right|thumb|250px|[[Palengke]]]]
-Say Angat walay 16 ya [[barangay]]:
-
-* Banaban
-* Baybay
-* Binagbag
-* Donacion
-* Encanto
-* Laog
-* Marungko
-* Niugan
-* Paltoc
-* Pulong Yantok
-* San Roque (Poblacion)
-* Santa Cruz (Poblacion)
-* Santa Lucia
-* Santo Cristo (Poblacion)
-* Sulucan
-* Taboc
-
-==Saray too diad Angat==
-* [[Mayor]]: Leonardo R. De Leon
-* Vice Mayor: Reynante S. Bautista
-
-
-{{philippines-geo-stub}}
-{{Bulakan}}
-
-[[Category:Saray baley na Bulacan]]
+#REDIRECT [[Angat, Bulacan]]
