--- a/Almazán.mw
+++ b/Almazán.mw
@@ -1,45 +1,7 @@
-{{Infobox City |
-official_name = Almazán, Spain | 
-nickname = | 
-image_flag = | 
-image_seal =| 
-image_map = Almazán (Soria) Mapa.svg| 
-map_caption = | 
-subdivision_type = [[List of countries|Country]] | 
-subdivision_name = [[Spain]] | 
-subdivision_type1 = [[Autonomous communities of Spain|Autonomous community]] | 
-subdivision_name1 = [[Castile and León]] | 
-subdivision_type2 = [[Provinces of Spain|Province]] | 
-subdivision_name2 = [[Soria (province)|Soria]] | 
-subdivision_type3 = [[List of municipalities in Soria|Municipality]] | 
-subdivision_name3 = Almazán | 
-leader_title = | 
-leader_name = | 
-area_magnitude = | 
-area_total_km2 = 165 | 
-area_land_km2 = | 
-area_water_km2 = | 
-elevation_m =  | 
-population_as_of = 2004 | 
-population_note = | 
-population_total =  5755 | 
-population_density_km2 = 34.9 | 
-timezone = [[Central European Time|CET]] | 
-utc_offset = +1 | 
-timezone_DST = [[Central European Summer Time|CEST]] | 
-utc_offset_DST = +2 | 
-latitude = | 
-longitude = | 
-website =  | 
-footnotes = | 
-}}
-[[File:Almazan puerta de la Villa.jpg|thumb|230px|Almazán]]
+{{Infobox location}}
+
 Sakey ya baley so '''Almazán''' ya naanap ed [[Luyag na Soria]], diad [[Castile san León]], [[Spain]]. Onong ed [[2004]] [[census]] ([[Instituto Nacional de Estadística (Spain)|INE]]), walay 5,755 ya totoon manaayam ed ayan baley.
 
-{{Municipalities in Soria}}
+{{stub}}
 
-{{Soria-geo-stub}}
-
-{{coord|41|29|N|2|32|W|display=title|region:ES_type:city_source:GNS-enwiki}}
-
-[[Category:Saray Baley ed Soria]]
+[[Category:Saray baley ed Soria]]
