--- a/Curitiba.mw
+++ b/Curitiba.mw
@@ -1,11 +1,13 @@
-[[File:Jardim Botanico night Curitiba Brasil.jpg|310px|right|thumb| Curitiba, Paraná, Brazil: [http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=25_25_47_S_49_16_19_W 25° 25' 47" S 49° 16' 19" O]]]
-[[File:Brasão de Armas do Município de Curitiba.png|70px|left]]
+{{infobox location}}
 
+[[File:Jardim Botanico night Curitiba Brasil.jpg|310px|thumb|Curitiba, Paraná, Brazil]]
 
-Say '''Curitiba''' sakey sankabalgan ya siyudadya ed abalaten [[Brazil]]. Onong ed 2007 census, walay population to ya 1,808,969.
+Say '''Curitiba''' sakey sankabalgan ya siyudadya ed abalaten [[Brazil]]. Onong ed 2015 sensus, walay population to ya 1,879,355.
 
-=== Saray Gawing ed Labas ===
+== Saray reperensiya ==
+{{Reflist}}
 
+== Saray gawing ed labas ==
 * http://www.curitiba.pr.gov.br 
 * http://www.curitiba-brazil.com 
 * [http://commons.wikimedia.org/wiki/Category:Curitiba Curitiba, Commons]
