--- a/Template:Abra.mw
+++ b/Template:Abra.mw
@@ -6,7 +6,7 @@
 |image = 
 |group1 = Saray baley
 |list1 = 
-* [[Bangued, Abra|Bangued]]
+* [[Bangued]]
 * [[Boliney, Abra|Boliney]]
 * [[Bucay, Abra|Bucay]]
 * [[Bucloc, Abra|Bucloc]]
