--- a/Buenavista,_Agusan_del_Norte.mw
+++ b/Buenavista,_Agusan_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del norte buenavista.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buenavista, Agusan del Norte
 | 1990 = 39331		
@@ -40,6 +41,9 @@ Say '''Buenavista''' et unaan ya klase baley ed luyag na [[Agusan del Norte]], [
 * Talo-ao
 * Lower Olave
 * Simbalan
+
+== Saray reperensiya ==
+{{Reflist}}	
 				
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
