--- a/Jabonga.mw
+++ b/Jabonga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del norte jabonga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jabonga, Agusan del Norte
 | 1990 = 18610		
@@ -31,10 +32,14 @@ Say '''Jabonga''' et kumatlo ya klase baley ed luyag na [[Agusan del Norte]], [[
 * San Vicente
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}	
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Norte}}														
+{{Agusan del Norte}}		
+												
 [[Category:Saray baley na Agusan del Norte]]
