--- a/Las_Nieves.mw
+++ b/Las_Nieves.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del norte las nieves.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Las Nieves, Agusan del Norte
 | 1990 = 15409		
@@ -34,11 +35,15 @@ Say '''Las Nieves''' et kumadwa ya klase baley ed luyag na [[Agusan del Norte]],
 * Rosario
 * San Roque
 * Casiklan
+
+== Saray reperensiya ==
+{{Reflist}}	
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Norte}}														
+{{Agusan del Norte}}	
+													
 [[Category:Saray baley na Agusan del Norte]]
