--- a/Magallanes,_Agusan_del_Norte.mw
+++ b/Magallanes,_Agusan_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del norte magallanes.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magallanes, Agusan del Norte
 | 1990 = 16211		
@@ -22,11 +23,15 @@ Say '''Magallanes''' et kumapat ya klase baley ed luyag na [[Agusan del Norte]],
 * Marcos
 * Santo Niño
 * Santo Rosario
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Norte}}													
+{{Agusan del Norte}}	
+												
 [[Category:Saray baley na Agusan del Norte]]
