--- a/Remedios_T._Romualdez.mw
+++ b/Remedios_T._Romualdez.mw
@@ -1,6 +1,7 @@
-[[File:Ph locator agusan del norte remedios t. romualdez.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
-| title = Sensus na populasyon ed <br> Remedios T. Romualdez, Agusan del Norte
+| title = Sensus na populasyon ed <br> Remedios T. Romualdez
 | 1990 = 10490		
 | 1995 = 12621		
 | 2000 = 13359		
@@ -23,11 +24,14 @@ Say '''Remedios T. Romualdez''' et kumalima ya klase baley ed luyag na [[Agusan 
 * Tagbongabong
 * Poblacion II	
 
-		
+== Saray reperensiya ==
+{{Reflist}}
+	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Norte}}													
+{{Agusan del Norte}}	
+												
 [[Category:Saray baley na Agusan del Norte]]
