--- a/Tubay.mw
+++ b/Tubay.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator agusan del norte tubay.png|right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tubay, Agusan del Norte
@@ -28,11 +28,15 @@ Say '''Tubay''' et kumapat ya klase baley ed luyag na [[Agusan del Norte]], [[Pi
 * Tinigbasan
 * Victory
 * Doña Telesfora
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Norte}}														
+{{Agusan del Norte}}	
+													
 [[Category:Saray baley na Agusan del Norte]]
