--- a/Cabadbaran.mw
+++ b/Cabadbaran.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_agusan_del_norte_cabadbaran.png|right|270px]] 							
-									
+{{Infobox location}}
+												
 Say '''Cabadbaran''' et kumapat ya klase siyudad ed luyag na [[Agusan del Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 73,639 totoo. <br> 	
-Walay kabaleg tan sukat to ya 214.44 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8605. 			
+Walay kabaleg tan sukat to ya 214.44 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8605. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Agusan del Norte}}		
 									
 [[Category:Saray siyudad na Filipinas]]
