--- a/Butuan.mw
+++ b/Butuan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_agusan_del_norte_butuan.png|right|270px]] 							
+{{Infobox location}} 							
 									
 Say '''Butuan''' et unaan ya klase siyudad ed luyag na [[Agusan del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 309,709 totoo. <br> 	
-Walay kabaleg tan sukat to ya 816.62 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8600. 			
+Walay kabaleg tan sukat to ya 816.62 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8600. 	
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Agusan del Norte}}		
 									
 [[Category:Saray siyudad na Filipinas]]
