--- a/La_Paz,_Agusan_del_Sur.mw
+++ b/La_Paz,_Agusan_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur la paz.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> La Paz, Agusan del Sur
 | 1990 = 16144		
@@ -31,11 +32,14 @@ Say '''La Paz''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pilip
 * San Patricio
 * Valentina
 
-	
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}														
+{{Agusan del Sur}}	
+													
 [[Category:Saray baley na Agusan del Sur]]
