--- a/Rosario,_Agusan_del_Sur.mw
+++ b/Rosario,_Agusan_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur rosario.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rosario, Agusan del Sur
 | 1990 = 25436		
@@ -13,7 +14,6 @@
 |}}
 Say '''Rosario''' et kumadwa ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 46,683 totoo. Walay kabaleg tan sukat to ya 385.05 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8504.	
 
-
 ==Saray barangay==
 * Bayugan 3
 * Cabantao
@@ -27,10 +27,14 @@ Say '''Rosario''' et kumadwa ya klase baley ed luyag na [[Agusan del Sur]], [[Pi
 * Libuac
 * Maligaya
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}															
+{{Agusan del Sur}}	
+														
 [[Category:Saray baley na Agusan del Sur]]
