--- a/San_Francisco,_Agusan_del_Sur.mw
+++ b/San_Francisco,_Agusan_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur san francisco.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Francisco, Agusan del Sur
 | 1990 = 43878		
@@ -11,8 +12,8 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Francisco''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 74,542 totoo. Walay kabaleg tan sukat to ya 392.53 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8501.	
 
+Say '''San Francisco''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 74,542 totoo. Walay kabaleg tan sukat to ya 392.53 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8501.	
 
 ==Saray barangay==
 * Alegria
@@ -43,10 +44,14 @@ Say '''San Francisco''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], 
 * Ladgadan
 * Ormaca
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}														
+{{Agusan del Sur}}		
+												
 [[Category:Saray baley na Agusan del Sur]]
