--- a/Santa_Josefa.mw
+++ b/Santa_Josefa.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur santa josefa.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Josefa, Agusan del Sur
 | 1990 = 24004		
@@ -13,7 +14,6 @@
 |}}
 Say '''Santa Josefa''' et kumatlo ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 26,729 totoo. Walay kabaleg tan sukat to ya 341.8 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8512.	
 
-
 ==Saray barangay==
 * Angas
 * Aurora
@@ -27,10 +27,14 @@ Say '''Santa Josefa''' et kumatlo ya klase baley ed luyag na [[Agusan del Sur]],
 * Concepcion
 * Pag-asa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}															
+{{Agusan del Sur}}	
+														
 [[Category:Saray baley na Agusan del Sur]]
