--- a/Talacogon.mw
+++ b/Talacogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur talacogon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talacogon, Agusan del Sur
 | 1990 = 21655		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Talacogon''' et kumadwa ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 38,374 totoo. Walay kabaleg tan sukat to ya 405.25 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8510.	
-
 
 ==Saray barangay==
 * Batucan
@@ -32,10 +32,14 @@ Say '''Talacogon''' et kumadwa ya klase baley ed luyag na [[Agusan del Sur]], [[
 * Zamora
 * Zillovia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}															
+{{Agusan del Sur}}		
+													
 [[Category:Saray baley na Agusan del Sur]]
