--- a/Trento.mw
+++ b/Trento.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator agusan del sur trento.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Trento, Agusan del Sur
 | 1990 = 31313		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Trento''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 51,565 totoo. Walay kabaleg tan sukat to ya 555.7 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8505.	
-
 
 ==Saray barangay==
 * Basa
@@ -32,11 +32,14 @@ Say '''Trento''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pilip
 * Manat
 * Pangyan
 
-	
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Agusan del Sur}}														
+{{Agusan del Sur}}	
+													
 [[Category:Saray baley na Agusan del Sur]]
