--- a/Altavas.mw
+++ b/Altavas.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_altavas.png|right|Mapa na Aklan ya nanengneng so location na Altavas]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Altavas, Aklan
 | 1990 = 20531		
@@ -36,6 +37,9 @@ Say Altavas walay 14 ya [[barangay]].
 * Talon
 * Tibiao
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
