--- a/Template:Aklan.mw
+++ b/Template:Aklan.mw
@@ -6,7 +6,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Altavas, Aklan|Altavas]]
+* [[Altavas]]
 * [[Balete, Aklan|Balete]]
 * [[Banga, Aklan|Banga]]
 * [[Batan, Aklan|Batan]]
