--- a/Balete,_Aklan.mw
+++ b/Balete,_Aklan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_balete.png|right|Mapa na Aklan ya nanengneng so location na Balete]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balete, Aklan
 | 1990 = 19842		
@@ -27,6 +28,9 @@ Say Balete walay 10 ya [[barangay]].
 * Morales
 * Oquendo
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
