--- a/Banga,_Aklan.mw
+++ b/Banga,_Aklan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_banga.png|right|Mapa na Aklan ya nanengneng so location na Banga]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banga, Aklan
 | 1990 = 28651		
@@ -53,6 +54,9 @@ Say Banga walay 30 ya [[barangay]].
 * Ugsod
 * Venturanza
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
