--- a/Batan.mw
+++ b/Batan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_batan.png|right|Mapa na Aklan ya nanengneng so location na Batan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Batan, Aklan
 | 1990 = 25710		
@@ -42,6 +43,9 @@ Say Batanwalay 20 ya [[barangay]].
 * Songcolan
 * Tabon
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
