--- a/Buruanga.mw
+++ b/Buruanga.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_buruanga.png|right|Mapa na Aklan ya nanengneng so location na Buruanga]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buruanga, Aklan
 | 1990 = 12653		
@@ -37,6 +38,9 @@ Say Buruanga 15 ya [[barangay]].
 * Tag-osip
 * Tigum
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
