--- a/Ibajay.mw
+++ b/Ibajay.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_aklan_ibajay.png|right|Mapa na Aklan ya nanengneng so location na Ibajay]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ibajay, Aklan
 | 1990 = 35640		
@@ -59,6 +60,9 @@ Say Ibajay 35 ya [[barangay]].
 * Unat
 * Yawan
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
