--- a/Kalibo.mw
+++ b/Kalibo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan kalibo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalibo, Aklan
 | 1990 = 51387		
@@ -32,6 +33,9 @@ Unong ed 2015 Census, say papulasyon to et 80,605 totoo. Walay kabaleg tan sukat
 * Pook
 * Tigayon
 * Tinigao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
