--- a/Lezo.mw
+++ b/Lezo.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator aklan lezo.png|right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lezo, Aklan
@@ -16,7 +16,7 @@
 Say '''Lezo''' et kumalima ya klase baley ed luyag na [[Aklan]], [[Pilipinas]]. <br>  
 Unong ed 2015 Census, say papulasyon to et 15,224 totoo. Walay kabaleg tan sukat to ya 23.40 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 5605.
 
-==Saray Barangay==
+==Saray barangay==
 * Agcawilan
 * Bagto
 * Bugasongan
@@ -30,10 +30,14 @@ Unong ed 2015 Census, say papulasyon to et 15,224 totoo. Walay kabaleg tan sukat
 * Silakat-Nonok
 * Tayhawan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Aklan}}
+
 [[Category:Saray baley na Aklan]]
