--- a/Madalag.mw
+++ b/Madalag.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator aklan madalag.png|right|270px]]	
-			
+{{Infobox location}}
+		
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Madalag, Aklan
 | 1990 = 15166		
@@ -42,6 +42,9 @@ Unong ed 2015 Census, say papulasyon to et 18,389 totoo. Walay kabaleg tan sukat
 * Talangban
 * Talimagao
 * Tigbawan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
