--- a/Makato.mw
+++ b/Makato.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan makato.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Makato, Aklan
 | 1990 = 19230		
@@ -34,6 +35,8 @@ Unong ed 2015 Census, say papulasyon to et 27,262 totoo. Walay kabaleg tan sukat
 * Tina
 * Tugas
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -41,4 +44,5 @@ Unong ed 2015 Census, say papulasyon to et 27,262 totoo. Walay kabaleg tan sukat
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Aklan}}
+
 [[Category:Saray baley na Aklan]]
