--- a/Malay,_Aklan.mw
+++ b/Malay,_Aklan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan malay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malay, Aklan
 | 1990 = 14378		
@@ -33,12 +34,14 @@ Unong ed 2015 Census, say papulasyon to et 52,973 totoo. Walay kabaleg tan sukat
 * Yapak
 * Motag
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Aklan}}
-
 
 [[Category:Saray baley na Aklan]]
