--- a/Malinao,_Aklan.mw
+++ b/Malinao,_Aklan.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator aklan malinao.png|right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malinao, Aklan
@@ -40,6 +40,9 @@ Unong ed 2015 Census, say papulasyon to et 23,194 totoo. Walay kabaleg tan sukat
 * Sugnod
 * Tambuan
 * Tigpalas
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
