--- a/Nabas.mw
+++ b/Nabas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan nabas.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nabas, Aklan
 | 1990 = 20538		
@@ -35,6 +36,9 @@ Unong ed 2015 Census, say papulasyon to et 36,435 totoo. Walay kabaleg tan sukat
 * Toledo
 * Unidos
 * Union
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
