--- a/New_Washington.mw
+++ b/New_Washington.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan new washington.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> New Washington, Aklan
 | 1990 = 30147		
@@ -15,7 +16,7 @@
 Say '''New Washington''' et kumatlo ya klase baley ed luyag na [[Aklan]], [[Pilipinas]]. <br>  
 Unong ed 2015 Census, say papulasyon to et 45,007 totoo. Walay kabaleg tan sukat to ya 66.69 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 5610.
 
-==Saray Barangay==
+==Saray barangay==
 * Candelaria
 * Cawayan
 * Dumaguit
@@ -32,6 +33,9 @@ Unong ed 2015 Census, say papulasyon to et 45,007 totoo. Walay kabaleg tan sukat
 * Polo
 * Puis
 * Tambak
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
