--- a/Numancia,_Aklan.mw
+++ b/Numancia,_Aklan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan numancia.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Numancia, Aklan
 | 1990 = 19899		
@@ -14,7 +15,7 @@
 Say '''Numancia''' et kumapat ya klase baley ed luyag na [[Aklan]], [[Pilipinas]]. <br>  
 Unong ed 2015 Census, say papulasyon to et 31,934 totoo. Walay kabaleg tan sukat to ya 28.84 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 5604.
 
-==Saray Barangay==
+==Saray barangay==
 *Albasan
 *Aliputos
 *Badio
@@ -32,6 +33,9 @@ Unong ed 2015 Census, say papulasyon to et 31,934 totoo. Walay kabaleg tan sukat
 *Poblacion
 *Pusiw
 *Tabangka
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
