--- a/Tangalan.mw
+++ b/Tangalan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator aklan tangalan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tangalan, Aklan
 | 1990 = 14773		
@@ -14,7 +15,7 @@
 Say '''Tangalan''' et kumalima ya klase baley ed luyag na [[Aklan]], [[Pilipinas]]. <br>  
 Unong ed 2015 Census, say papulasyon to et 21,916 totoo. Walay kabaleg tan sukat to ya 74.59 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 5612.
 
-==Saray Barangay==
+==Saray barangay==
 * Afga
 * Baybay
 * Dapdap
@@ -31,6 +32,9 @@ Unong ed 2015 Census, say papulasyon to et 21,916 totoo. Walay kabaleg tan sukat
 * Tamokoe
 * Tondog
 * Vivo
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
