--- a/Bacacay.mw
+++ b/Bacacay.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_albay_bacacay.png|right|Mapa na Albay ya nanengneng so location na Bacacay]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bacacay, Albay
 | 1990 = 49202		
@@ -79,6 +80,9 @@ Say Bacacay walay 56 ya barangay.
 * Vinisitahan-Basud (Mainland)
 * Vinisitahan-Napao (Island)
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
