--- a/Template:Albay.mw
+++ b/Template:Albay.mw
@@ -7,7 +7,7 @@
 |group1 = Saray baley
 |list1 = 
 * [[Bacacay, Albay|Bacacay]]
-* [[Camalig, Albay|Camalig]]
+* [[Camalig]]
 * [[Daraga, Albay|Daraga]]
 * [[Guinobatan, Albay|Guinobatan]]
 * [[Jovellar, Albay|Jovellar]]
