--- a/Camalig.mw
+++ b/Camalig.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_albay_camalig.png|right|Mapa na Albay ya nanengneng so location na Camalig]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Camalig, Albay
 | 1990 = 49975		
@@ -74,6 +75,8 @@ Say Camalig walay 50 ya barangay.
 * Caguiba
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
