--- a/Daraga.mw
+++ b/Daraga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay daraga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Daraga, Albay
 | 1990 = 83928		
@@ -68,6 +69,9 @@ Say '''Daraga''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. U
 * Tagas
 * Talahib
 * Villahermosa
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
