--- a/Guinobatan.mw
+++ b/Guinobatan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay guinobatan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guinobatan, Albay
 | 1990 = 58926		
@@ -58,6 +59,9 @@ Say '''Guinobatan''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]
 * Sinungtan
 * Tandarora
 * Travesia
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
