--- a/Jovellar.mw
+++ b/Jovellar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay jovellar.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jovellar, Albay
 | 1990 = 14884		
@@ -37,6 +38,9 @@ Say '''Jovellar''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]
 * Sinagaran
 * Villa Paz
 * Aurora Pob. (Bgy. 6)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
