--- a/Libon.mw
+++ b/Libon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay libon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libon, Albay
 | 1990 = 59910		
@@ -13,7 +14,7 @@
 |}}
 Say '''Libon''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 71,527 totoo. Walay kabaleg tan sukat to ya 222.76 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4507.
 
-==Saray Barangay==
+==Saray barangay==
 * Alongong
 * Apud
 * Bacolod
@@ -61,6 +62,9 @@ Say '''Libon''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Un
 * Zone V (Pob.)
 * Zone VI (Pob.)
 * Zone VII (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
