--- a/Malilipot.mw
+++ b/Malilipot.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay malilipot.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malilipot, Albay
 | 1990 = 24160		
@@ -13,7 +14,7 @@
 |}}
 Say '''Malilipot''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 37,785 totoo. Walay kabaleg tan sukat to ya 44.13 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4510.	
 
-==Saray Barangay==
+==Saray barangay==
 * Binitayan
 * Calbayog
 * Canaway
@@ -32,6 +33,9 @@ Say '''Malilipot''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas
 * San Roque
 * Santa Cruz
 * Santa Teresa
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
