--- a/Malinao,_Albay.mw
+++ b/Malinao,_Albay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay malinao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malinao, Albay
 | 1990 = 31349		
@@ -13,7 +14,7 @@
 |}}
 Say '''Malinao''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 45,301 totoo. Walay kabaleg tan sukat to ya 107.5 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4512.	
 
-==Saray Barangay==
+==Saray barangay==
 * Awang
 * Bagatangki
 * Balading
@@ -43,6 +44,9 @@ Say '''Malinao''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas]]
 * Tagoytoy
 * Tanawan
 * Tuliw
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
