--- a/Manito.mw
+++ b/Manito.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay manito.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Manito, Albay
 | 1990 = 16011		
@@ -29,6 +30,9 @@ Say '''Manito''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]].
 * Nagotgot
 * Pawa
 * Tinapian
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
