--- a/Oas.mw
+++ b/Oas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay oas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Oas, Albay
 | 1990 = 53061		
@@ -68,6 +69,9 @@ Say '''Oas''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unon
 * Tobgon
 * Tobog
 * Tablon
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
