--- a/Pio_Duran.mw
+++ b/Pio_Duran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay pio duran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pio Duran, Albay
 | 1990 = 36859		
@@ -13,7 +14,7 @@
 |}}
 Say '''Pio Duran''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 45,028 totoo. Walay kabaleg tan sukat to ya 133.7 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4516.
 
-==Saray Barangay==
+==Saray barangay==
 * Agol
 * Alabangpuro
 * Basicao Coastal
@@ -48,6 +49,9 @@ Say '''Pio Duran''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas
 * Sukip
 * Tibabo
 * La Medalla (SawMill)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
