--- a/Polangui.mw
+++ b/Polangui.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay polangui.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Polangui, Albay
 | 1990 = 61556		
@@ -13,7 +14,7 @@
 |}}
 Say '''Polangui''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 88,221 totoo. Walay kabaleg tan sukat to ya 145.3 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4506.	
 
-==Saray Barangay==
+==Saray barangay==
 *Agos 	
 *Alnay 	
 *Alomon 	
@@ -57,6 +58,9 @@ Say '''Polangui''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]].
 *Sta. Teresita 	
 *Sugcad 	
 *Ubaliw
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
