--- a/Rapu-Rapu.mw
+++ b/Rapu-Rapu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay rapu-rapu.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rapu-Rapu, Albay
 | 1990 = 26232		
@@ -13,7 +14,7 @@
 |}}
 Say '''Rapu-Rapu''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 36,920 totoo. Walay kabaleg tan sukat to ya 155.3 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4517.	
 
-==Saray Barangay==
+==Saray barangay==
 * Bagaobawan
 * Batan
 * Bilbao
@@ -48,6 +49,9 @@ Say '''Rapu-Rapu''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas
 * Tinopan
 * Viga
 * Villahermosa
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
