--- a/Santo_Domingo,_Albay.mw
+++ b/Santo_Domingo,_Albay.mw
@@ -1,5 +1,5 @@
-													
-[[File:Ph locator albay santo domingo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Domingo, Albay
 | 1990 = 22939		
@@ -14,7 +14,7 @@
 |}}
 Say '''Santo Domingo''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 34,967 totoo. Walay kabaleg tan sukat to ya 51.22 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4508.	
 
-==Saray Barangay==
+==Saray barangay==
 * Alimsog
 * Buhatan
 * Calayucay
@@ -38,6 +38,9 @@ Say '''Santo Domingo''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilip
 * Santo Niño
 * Market Site Pob. (Bgy. 9)
 * Pandayan Pob. (Bgy. 10)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
