--- a/Tiwi.mw
+++ b/Tiwi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator albay tiwi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tiwi, Albay
 | 1990 = 34658		
@@ -13,7 +14,7 @@
 |}} 
 Say '''Tiwi''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 53,120 totoo. Walay kabaleg tan sukat to ya 105.76 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4513.	
 
-==Saray Barangay==
+==Saray barangay==
 * Bagumbayan
 * Bariis
 * Baybay
@@ -39,6 +40,9 @@ Say '''Tiwi''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Uno
 * San Bernardo
 * Sogod
 * Tigbi (Poblacion)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
