--- a/Ligao.mw
+++ b/Ligao.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_albay_ligao.png|right|270px]] 							
+{{Infobox location}}
+					
 Say '''Ligao''' et kumapat ya klase siyudad ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 104,914 totoo. Walay kabaleg tan sukat to ya 246.75 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4504.
 
 == Saray barangay ==
@@ -64,6 +65,9 @@ Say Siyudad na Ligao walay 55 ya [[barangay]].
 * Tula-tula Pequeño
 * Tupas
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Albay}}
 	
