--- a/Tabaco.mw
+++ b/Tabaco.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_albay_tabaco.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tabaco''' et kumapat ya klase siyudad ed luyag na [[Albay]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 125,083 totoo. <br> 	
 Walay kabaleg tan sukat to ya 117.14 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4511. 
@@ -58,6 +58,9 @@ Say Siyudad na Tabaco walay 47 ya [[barangay]].
 * Tayhi (Pob.)
 * Visita (San Miguel Island)
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 * [http://elgu.ncc.gov.ph/ecommunity/tabacocity/ Opisyal na Websayt]
