--- a/Anini-y.mw
+++ b/Anini-y.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique anini-y.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Anini-y, Antique
 | 1990 = 16851		
@@ -40,6 +41,9 @@ totoo. Walay kabaleg tan sukat to ya 66.17 sq. km. Sikato et walad alenleneg ya 
 * San Roque
 * Tagaytay
 * Talisayan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
