--- a/Barbaza.mw
+++ b/Barbaza.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique barbaza.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barbaza, Antique
 | 1990 = 14984		
@@ -55,6 +56,9 @@ Say '''Barbaza''' et kumapat ya klase baley ed luyag na [[Antique]], [[Pilipinas
 * Tig-Alaran
 * Yapo
 * Palma
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
