--- a/Belison.mw
+++ b/Belison.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique belison.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Belison, Antique
 | 1990 = 10095		
@@ -27,10 +28,14 @@ Say '''Belison''' et kumalima ya klase baley ed luyag na [[Antique]], [[Pilipina
 * Salvacion (Kotkot)
 * Sinaja
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}	
+														
 [[Category:Saray baley na Antique]]
