--- a/Bugasong.mw
+++ b/Bugasong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique bugasong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bugasong, Antique
 | 1990 = 24537		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Bugasong''' et kumatlo ya klase baley ed luyag na [[Antique]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 33,642 totoo. Walay kabaleg tan sukat to ya 203.71 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5704.	
-
 
 ==Saray barangay==
 
@@ -44,10 +44,14 @@ Say '''Bugasong''' et kumatlo ya klase baley ed luyag na [[Antique]], [[Pilipina
 * Yapu
 * Zaragoza
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}		
+													
 [[Category:Saray baley na Antique]]
