--- a/Template:Antique.mw
+++ b/Template:Antique.mw
@@ -11,7 +11,7 @@
 * [[Belison, Antique|Belison]]
 * [[Bugasong, Antique|Bugasong]]
 * [[Caluya, Antique|Caluya]]
-* [[Culasi, Antique|Culasi]]
+* [[Culasi]]
 * [[Hamtic, Antique|Hamtic]]
 * [[Laua-an, Antique|Laua-an]]
 * [[Libertad, Antique|Libertad]]
