--- a/Libertad,_Antique.mw
+++ b/Libertad,_Antique.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique libertad.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libertad, Antique
 | 1990 = 11049		
@@ -35,10 +36,14 @@ Say '''Libertad''' et kumalima ya klase baley ed luyag na [[Antique]], [[Pilipin
 * Taboc
 * Union
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}		
+													
 [[Category:Saray baley na Antique]]
