--- a/Calanasan.mw
+++ b/Calanasan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_calanasan.png|right|Mapa na Apayao ya nanengneng so location na Calanasan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calanasan, Apayao
 | 1990 = 10699		
@@ -38,6 +39,9 @@ Say Calanasan walay 16 ya [[barangay]].
 * Eva Puzon
 * Kabugawan
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
