--- a/Conner.mw
+++ b/Conner.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_apayao_conner.png|right|Mapa na Apayao ya nanengneng so location na Conner]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Conner, Apayao
 | 1990 = 16220		
@@ -42,6 +43,9 @@ Say Conner walay 21 ya [[barangay]].
 * Ili
 * Mawegui
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
